kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ethereum-blockchain-api-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ethereum-blockchain-api
  template:
    metadata:
      labels:
        app: ethereum-blockchain-api
    spec:
      containers:
      - name: ethereum-blockchain-api
        image: oydeu/api-blockchain:latest
        ports:
        - containerPort: 3000
