kube/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ethereum-blockchain-api-service
spec:
  selector:
    app: ethereum-blockchain-api
  type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
